# boa

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HACKING.md  KaleidoscopeJIT.h  Makefile  README.md  a.out  foo.md  foo2.md  idead.md  main.cpp  my-lang.cc  my-lang.cpp  test.txt  toy.cpp
.github/workflows/: ci.yml
a.out.dSYM/Contents/Resources/DWARF/: a.out
cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  spell.cmake  variables.cmake
context/: context-manager.h
examples/: accessstruct.boa  mandelbrot.boa  nestesstructs.boa  strcuts.boa  test.boa  testWithStructs.boa  variables.boa
instructions/: allocator.h
lexer/: argument_token.h  lexer-builder.h  token.h  tokenizer.cpp  tokenizer.h
lexer/arguments/: argument_token.h  argument_tokenizer.cpp
lexer/input/: cli_reader.cpp  cli_reader.h  file_reader.cpp  file_reader.h  filereader.cpp  inputreader.h
lexer/token/: tokenizer.cpp
lexer/tokenizer/: tokenizer.h
my-lang.dSYM/Contents/: Info.plist
my-lang.dSYM/Contents/Resources/DWARF/: my-lang
source/: KaleidoscopeJIT.h  lib.cpp  main.cpp
source/ast/expressions/: expr_ast.h
source/ast/expressions/number/: number_ast.h
source/context/: context-manager.h
source/instructions/: allocator.h
source/lexer/: lexer-builder.h
source/lexer/arguments/: argument_token.h  argument_tokenizer.cpp  argument_tokenizer.h
source/lexer/input/: cli_reader.cpp  cli_reader.h  file_reader.cpp  file_reader.h  input_stream_reader.h
source/lexer/token/: tokenizer.cpp
source/lexer/tokenizer/: token.h  tokenizer.cpp  tokenizer.h
test/: CMakeLists.txt
test/source/: boa-programming-language_test.cpp
workflows/: ci.yml
